

export interface IElevatorPersistence {
    domainId: string;
    buildingName: string;
    floor: string[];
    position: number[];
  }