import { Floor } from "../domain/floor";

export interface IElevatorDTO {
    id: string;
    buildingName: string;
    floors: string[];
    position: number[];
  }